# graph-browser

./: Cargo.toml  README.md
.cargo/: config.toml
browser/: Cargo.toml
browser/src/: main.rs
graph-bgml/: Cargo.toml
graph-bgml/docs/bgml/: appendix.md  basics.md  templating.md
graph-common/: Cargo.toml
graph-common/src/: lib.rs  renderer.rs  util.rs
graph-engine/: Cargo.toml
graph-engine/src/: lib.rs
graph-engine/src/subsystems/: event.rs  mod.rs  ui.rs  window.rs
graph-macros/: Cargo.toml
graph-macros-derive/: Cargo.toml
graph-macros/src/: builder_wrap.rs  discriminant.rs  lib.rs
graph-sso/: Cargo.toml  rust-toolchain.toml
graph-sso/.cargo/: config.toml
graph-sso/benches/: prof.rs
graph-sso/src/: const_utils.rs  lib.rs
graph-ui/: Cargo.toml
tl2wasm/: Cargo.toml
tl2wasm/examples/: basic.rs
tl2wasm/src/: lib.rs  teal.pest
tl2wasm/src/teal/: mod.rs  parser.rs
