[build]
    incremental = true

[workspace]
    members = [
        "browser",
        # "tl2wasm",
        "graph-engine",
        "graph-common",
    ]

    [workspace.package]
        edition = "2024"
        authors = ["Maxine Zick <maxine@pnk.dev>"]
        version = "0.1.0"
        readme = "README.md"
        keywords = ["bitgrid", "lua", "teal", "wasm", "typescript"]
        categories = ["wasm", "gui", "api-bindings", "compilers", "embedded"]

    [workspace.dependencies.sdl3]
        version = "0.14.29"
        features = ["build-from-source"]

    [workspace.dependencies.imgui]
        version = "0.12.0"

    [workspace.dependencies.imgui-sdl3-support]
        version = "0.13.0"

    [workspace.dependencies.imgui-glow-renderer]
        version = "0.13.0"

    [workspace.dependencies.common]
        path = "graph-common"
        package = "graph-common"

    [workspace.dependencies.graph-engine]
        path = "graph-engine"

[alias]
    run = "run -p browser"
    build = "build -p browser"

