[package]
    name = "graph-browser"
    edition.workspace = true
    authors.workspace = true
    version.workspace = true
    readme.workspace = true
    keywords.workspace = true
    categories.workspace = true

[features]
    default = []

[dependencies]
    common.workspace = true
    graph-engine.workspace = true
