[package]
    name = "graph-common"
    edition = "2024"
    authors.workspace = true
    version.workspace = true
    readme.workspace = true
    keywords.workspace = true
    categories.workspace = true

[dependencies]
    sdl3.workspace = true
    imgui.workspace = true
    imgui-sdl3-support.workspace = true
    imgui-glow-renderer.workspace = true
