[package]
    name = "graph-engine"
    edition.workspace = true
    authors.workspace = true
    version.workspace = true
    readme.workspace = true
    keywords.workspace = true
    categories.workspace = true

[dependencies]
    graph-ui.workspace = true
    sdl3.workspace = true
    imgui.workspace = true

