[package]
    name = "graph-macros-derive"
    edition.workspace = true
    authors.workspace = true
    version.workspace = true
    readme.workspace = true
    keywords.workspace = true
    categories.workspace = true

[dependencies]
    syn = { version = "2", features = ["full"] }
    quote = "1"
    proc-macro2 = "1"

[lib]
    proc-macro = true
