[package]
    name = "graph-macros"
    edition.workspace = true
    authors.workspace = true
    version.workspace = true
    readme.workspace = true
    keywords.workspace = true
    categories.workspace = true

[dependencies]
    syn = { version = "2", features = ["full"] }
    proc-macro-error = "1.0.4"
    macro_tools = "0.55.0"
    proc-macro2 = "1"
    heck = "0.5.0"
    quote = "1"
itertools = "0.14.0"

[lib]
    proc-macro = true
