[package]
    name = "graph-sso"
    edition.workspace = true
    authors.workspace = true
    repository.workspace = true
    version.workspace = true
    readme.workspace = true
    keywords = ["sso", "strings", "nostd"]
    categories = ["no-std", "data-structures", "embedded"]

[[bench]]
    name = "prof"
    harness = false

[dependencies]
const-str = "0.6.2"
    static_assertions = "1.1.0"

[dev-dependencies]
    criterion.workspace = true
